# LDmicro

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  ComoHacer-ARM.txt  ComoHacer-AVR.txt  ComoHacer-PIC16.txt  HowTo-ARM.txt  HowTo-AVR.txt  HowTo-PIC16.txt  ISSUE_TEMPLATE.md  README.md  makeld.bat
GIT_HOOKS/: post-checkout  post-commit  post-merge
["ldmicro", "sample"]/: c_demo.ld
common/gsl-lite/include/: gsl.h  gsl.hpp
common/stringarray/: stringarray.hpp
common/utils/: filetracker.hpp
common/win32/: freeze.cpp  freeze.h
common/win32xx/include/: changes.txt  copyright.txt  default_resource.h  default_resource.rc  info.txt  release notes.txt  wxx_appcore.h  wxx_appcore0.h  wxx_archive.h  wxx_commondlg.h  wxx_controls.h  wxx_cstring.h  wxx_ddx.h  wxx_dialog.h  wxx_dockframe.h  wxx_docking.h  wxx_exception.h  wxx_file.h  wxx_filefind.h  wxx_folderdialog.h  wxx_frame.h  wxx_gdi.h  wxx_imagelist.h  wxx_listview.h  wxx_mdi.h  wxx_menu.h  wxx_menubar.h  wxx_metafile.h  wxx_printdialogs.h  wxx_propertysheet.h  wxx_rebar.h  wxx_rect.h  wxx_regkey.h  wxx_ribbon.h  wxx_richedit.h  wxx_socket.h  (+16 more)
ldmicro/: .clang-format  7zip.py  CHANGES.txt  CMakeLists.txt  INTERNALS.txt  Makefile  Makefile_nix  Makefile_win  PASCAL.CPP  PCPORTS.CPP  README.txt  Thumbs.db  accel.cpp  accel.h  ansic.cpp  avr.cpp  bits.h  buildArm.bat  buildAvr.bat  buildCCS.bat  buildPic16.bat  buildPic18.bat  circuit.cpp  circuit.h  clang-frmt.bat  clang.bat  clear.bat  clr.bat  cmake-clean.bat  cmake-clean.py  cmake.bat  coildialog.cpp  colorDialog.cpp  commentdialog.cpp  compilecommon.cpp  compilercommon.cpp  compilercommon.hpp  compilerexceptions.hpp  confdialog.cpp  contactsdialog.cpp  (+82 more)
ldmicro/LIBRARIES_FOR/: CommentFaire-ARM.txt  CommentFaire-AVR.txt  CommentFaire-PIC16.txt  CommentFaire-PIC18.txt  ComoHacer-ARM.txt  ComoHacer-AVR.txt  ComoHacer-PIC16.txt  ComoHacer-PIC18.txt  HowTo-ARM.txt  HowTo-AVR.txt  HowTo-PIC16.txt  HowTo-PIC18.txt
ldmicro/LIBRARIES_FOR/ANSIC/: romlib.c  romlib.h
ldmicro/LIBRARIES_FOR/ARDUINO/: RomLib.h  UartLib.h  usrlib.h
ldmicro/LIBRARIES_FOR/ARDUINO/PwmFrequency/: PwmFrequency.cpp  PwmFrequency.h
ldmicro/LIBRARIES_FOR/Arm/: CortexM4.ln  Lib_adc.c  Lib_gpio.c  Lib_gpio.h  Lib_i2c.c  Lib_i2clcd-en.txt  Lib_i2clcd-es.txt  Lib_i2clcd-fr.txt  Lib_i2clcd.c  Lib_i2clcd.h  Lib_i2clcd.txt  Lib_pwm.c  Lib_pwm.h  Lib_spi.c  Lib_spi.h  Lib_timer.c  Lib_timer.h  Lib_uart.c  Lib_uart.h  Lib_usr.c  VerLib_5.3a.h  core_cm4.h  stm32f4xx_adc.c  stm32f4xx_gpio.c  stm32f4xx_gpio.h  stm32f4xx_i2c.c  stm32f4xx_rcc.c  stm32f4xx_spi.c  stm32f4xx_tim.c  stm32f4xx_usart.c  system_stm32f4xx.c
ldmicro/LIBRARIES_FOR/Arm/STM32F1/: CortexM3.S  CortexM3.ln  Lib_adc.c  Lib_adc.h  Lib_gpio.c  Lib_gpio.h  Lib_i2c.c  Lib_i2c.h  Lib_i2clcd.c  Lib_i2clcd.h  Lib_pwm.c  Lib_pwm.h  Lib_spi.c  Lib_spi.h  Lib_timer.c  Lib_timer.h  Lib_uart.c  Lib_uart.h  Lib_usr.c  Lib_usr.h  UartLib.h  VerLib_5.3.1.0.h  core_cm3.h  interrupts.h  misc.c  romlib.h  stm32f10x.h  stm32f10x_adc.c  stm32f10x_conf.h  stm32f10x_gpio.c  stm32f10x_i2c.c  stm32f10x_rcc.c  stm32f10x_spi.c  stm32f10x_tim.c  stm32f10x_usart.c  system_stm32f10x.c  usrlib.c  usrlib.h
ldmicro/LIBRARIES_FOR/Arm/STM32F4/: CortexM4.S  Lib_adc.h  Lib_gpio.c  Lib_i2c.c  Lib_i2c.h  Lib_i2clcd.c  Lib_i2clcd.h  Lib_pwm.c  Lib_spi.c  Lib_timer.h  Lib_uart.c  Lib_usr.c  Lib_usr.h  misc.c  stm32f4xx.h  stm32f4xx_adc.c  stm32f4xx_gpio.c  stm32f4xx_rcc.c  stm32f4xx_spi.c  stm32f4xx_tim.c  stm32f4xx_usart.c  system_stm32f4xx.c  system_stm32f4xx.h  usrlib.c
ldmicro/LIBRARIES_FOR/Avr/: AdcLib.c  AdcLib.h  I2CLib.c  I2CLib.h  LcdI2cLib-en.txt  LcdI2cLib-es.txt  LcdI2cLib-fr.txt  LcdI2cLib.c  LcdI2cLib.h  PwmLib.c  PwmLib.h  RomLib.c  RomLib.h  SpiLib.c  SpiLib.h  UartLib.c  UartLib.h  UsrLib.c  UsrLib.h
ldmicro/LIBRARIES_FOR/CCS_PIC_C/: UartLib.c  UartLib.h  read.me  romlib.c  romlib.h  usrlib.c  usrlib.h
ldmicro/LIBRARIES_FOR/PIC18/: AdcLib.c  AdcLib.h  I2cLib.c  I2cLib.h  LcdI2cLib-en.txt  LcdI2cLib-es.txt  LcdI2cLib-fr.txt  LcdI2cLib.c  LcdI2cLib.h  PwmLib.c  PwmLib.h  SpiLib.c  SpiLib.h  UartLib.c  UartLib.h  UsrLib.c  UsrLib.h
ldmicro/LIBRARIES_FOR/Pic16/: AdcLib.c  AdcLib.h  I2cLib.c  I2cLib.h  LcdI2cLib-en.txt  LcdI2cLib-es.txt  LcdI2cLib-fr.txt  LcdI2cLib.c  LcdI2cLib.h  PwmLib.c  PwmLib.h  RomLib.h  SpiLib.c  SpiLib.h  UartLib.c  UartLib.h  UsrLib.c  UsrLib.h
ldmicro/Tests/: test-adc.ld  test-i2c-1.ld  test-i2c-2.ld  test-i2c-lcd16x2.ld  test-leds.ld  test-pwm.ld  test-spi.ld  test-uart.ld
ldmicro/VisualStudio/: LDmicro.vcxproj  LDmicro.vcxproj.filters  readme.txt
ldmicro/build412/: git_commit.h
ldmicro/cmake/: PrecompiledHeader.cmake  after_build.cmake  ldversion.h.in
ldmicro/ldcompilerlib/: CMakeLists.txt
ldmicro/ldinterpret/: CMakeLists.txt
ldmicro/ldlanglib/: CMakeLists.txt
ldmicro/ldlog/: CMakeLists.txt
ldmicro/ldlog/include/: ldlog.hpp
ldmicro/ldlog/src/: ldlogexport.h  logger.cpp  logger.hpp  time_utils.hpp  winerror.cpp  winerror.hpp
ldmicro/ldlog/src/fmt/: format.h
ldmicro/ldlog/src/sinks/: consolesink.cpp  consolesink.hpp  windowsdebugstringsink.cpp  windowsdebugstringsink.hpp  windowsmessagesink.cpp  windowsmessagesink.hpp
ldmicro/ldmicro-xx/: CMakeLists.txt
ldmicro/ldmicro-xx/res/: ldmicro.exe.manifest  ldmicro.rc  resource.h
ldmicro/ldmicro-xx/src/: FontEx.cpp  FontEx.hpp  ScrollWnd.cpp  ScrollWnd.hpp  ladderwindow.cpp  ladderwindow.hpp  ldmicroapp.cpp  ldmicroapp.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
ldmicro/ldmicro-xx/src/precomp/: ldmicroxxprecomphdr.cpp  ldmicroxxprecomphdr.hpp
ldmicro/reg/: go.bat  run-tests.pl
ldmicro/reg/expected/: avr-hw.hex  contacts.hex  integers.hex  misc-ops.hex  pic16-hw.hex  timers-counters.hex
ldmicro/reg/tests/: avr-hw.ld  contacts.ld  integers.ld  misc-ops.ld  pic16-hw.ld  timers-counters.ld
ldmicro/sample/: 7Segments.doc  7seg-display.ld  MasterRelay-Test.ld  asm_demo.ld  asm_demo.pl  blink.ld  c_demo.ld  coil_s_r_n.ld  ctc_osr.ld  ctu_ctd_ctc.ld  ctu_ctd_ctc_ctr.ld  frmt_escape.ld  hello.ld  pic-adc.ld  serial.ld  swatch1.ld  swatch2.ld  traffic.ld  var-timer.ld
(+4 files in other folders)
